Added sprite animation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Snail Jump</title>
+  <title>Dinocalypse</title>
 
   <link rel="stylesheet" href="style.css">
   <script type="module" src="index.js"></script>
@@ -15,7 +15,7 @@
 
   <div class="main">
 
-    <h1>Snail Jump</h1>
+    <h1>Dinocalypse</h1>
 
     <div class="container">
       <canvas id="myCanvas" width="500" height="500"></canvas>
